lib_LTLIBRARIES = libgarble.la

libgarble_la_LDFLAGS= -no-undefined -version-info 0:0:0

libgarble_la_SOURCES =	\
	block.c	\
	eval.c	\
	extend_printf.c	\
	garble.c	\
	gc.c	\
	scd.c

include_HEADERS = \
	garble.h

garbledir = $(includedir)/garble
garble_HEADERS =	\
	garble/aes.h	\
	garble/block.h	\
	garble/garble_gate_halfgates.h	\
	garble/garble_gate_privacy_free.h	\
	garble/garble_gate_standard.h
